[gd_scene load_steps=4 format=3 uid="uid://bdaddyirk65h8"]

[ext_resource type="Script" path="res://enemy/skeleton.gd" id="1_dsen7"]
[ext_resource type="PackedScene" uid="uid://3fh08smu7rqr" path="res://character_stats/character_stats.tscn" id="2_ytqge"]
[ext_resource type="Texture2D" uid="uid://5ff8mh7ufknp" path="res://icon.svg" id="3_wjxkp"]

[node name="Skeleton" type="Node2D" groups=["enemy"]]
script = ExtResource("1_dsen7")

[node name="CharacterStats" parent="." instance=ExtResource("2_ytqge")]
hp = 12
hp_max = 12
damage = 9
defense = 3
attack_speed = 0.3

[node name="Icon" type="Sprite2D" parent="."]
texture = ExtResource("3_wjxkp")

[node name="HpProgressBar" type="ProgressBar" parent="."]
offset_left = -152.0
offset_top = -160.0
offset_right = 153.0
offset_bottom = -121.0

[node name="AttackProgressBar" type="ProgressBar" parent="."]
offset_left = -152.0
offset_top = -112.0
offset_right = 153.0
offset_bottom = -73.0
